# simple-erddap-metrics

./: README.md  pyproject.toml
app/: data_loader.py  streamlit_app.py
simple_erddap_metrics/: __init__.py  cards.py  charts.py  cli.py  config.py  constants.py  ip_lookup.py  map_view.py  parser.py  patterns.py  streamlit_app.py
simple_erddap_metrics/resources/: config.yaml
